src/test/deca/syntax/invalid/class/declaration/missing_name_10.deca
// Description:
//    Tests a syntactically incorrect program for a class with a missing name
//
// Results:
//    Line 10 : Error, expected class name.
//
// History:
//    created on 07/01/2025

class {
    int a = 10;
    float b = 10.0;
}